[B]Version 6.1.0 - 2023-01-18[/B]
- IPTV Manager integration (CodingBullywug)
- fix for missing subtitles
- fix for missing item descriptions

[B]Version 6.0.2 - 2022-10-12[/B]
- fix bug when fetching paged lists
- fix bug for documentaries category
- added top spinner item to home screen
- added use of local subtitle files

[B]Version 6.0.1 - 2022-09-19[/B]
- fix bug for live streams in menu items
- added simple area menu option
- added getting schedules for up to 7 days

[B]Version 6.0.0 - 2022-09-01[/B]
- Major code re-factor for new API from dr.dk

[B]Version 5.1.2 - 2022-06-01[/B]
- catch failure in recache cleanup
- add setting for inputstream api

[B]Version 5.1.1 - 2022-04-20[/B]
- hot-fix to use hls inputstreams

[B]Version 5.1.0 - 2022-04-01[/B]
- re-factor for python 3 only
- remove exception handling for pastebin
- add Minisjang area and update ui elements

[B]Version 5.0.17 - 2022-01-22[/B]
- add subtitles to livestreams
- change exception handling to pastebin from buggalo

[B]Version 5.0.16 - 2021-03-30[/B]
- fix bug on ok() dialog in matrix
- fix bugs in favorit programs functionality
- new setting to have area chooser item in root

[B]Version 5.0.15 - 2021-03-13[/B]
- Add buggalo error submit to kodi.drnu gmail
- fix bug for write subtitle files on libreelec, kodi 18.9

﻿[B]Version 5.0.14 - 2021-03-06[/B]
- Bumping version number, to re-activate addon in leia addon channel
- Re-factor code to work on both python2 and python 3

[B]Version 5.0.13 - 2021-02-27[/B]
- Adding old PR's + minor fixes. last update before kodi 19 and python3
- Change for request-cache for storing web requests locally (in 8hours) #34
- Fix missing thumbnails and added option in settings to choose fan-art image size #29 #35
- Fixed themes menu item #34
- Add support for other plugins to start live tv. #31
- Update logos and entry screen #24
- Change subtitle handling to local srt files, so user also can change for hard-of-hearing subs and change while watching #36
